# dotfiles

./: .claude  .gitignore  .gitmodules  .sops.yaml  AGENTS.md  LICENSE  README.md  configuration.nix  flake.nix  home.nix  switch.sh
.beads/: .gitignore  config.yaml  issues.jsonl  metadata.json
.claude/: settings.local.json
agent/: 2026-feb-04-impl-plan.md  2026-feb-04-improvements.md  2026-feb-04-user-requirements-document.md  ARCHITECT_PROMPT.md  improvements.md  session-ses_3d42.md
agent/opencode-security/: README.md  pyproject.toml
agent/opencode-security/src/opencode_security/: __init__.py  __main__.py  acp.py  filter.py  paths.py  patterns.py  proxy.py  resolver.py  types.py
agent/opencode-security/tests/: test_acp.py  test_benchmark.py  test_filter.py  test_integration.py  test_paths.py  test_patterns.py  test_patterns_combinatorial.py  test_proxy.py  test_resolver.py
agent/opencode-security/tests/fixtures/: __init__.py  pattern_fixture.py  patterns.yaml
docs/: agent-sandbox.md  beads-dolt-architecture.md  grsim6-codebase-architecture.md  lessons-learned-sops-secrets-injection.md  user-feedback-sops.md
errata/: pub.keys
hypr/: hyprland.conf
modules/: default.nix  template.nix
programs/: dwl.nix  run-cwd.nix  scythe.nix
scripts/: .gitignore  aura-swarm  bd-worktree-connect.sh  create-ca.sh  debug-tailscale.sh  debug-vm-network.sh  diagnose-exit-node.sh  diagnose-tailscale.sh  diagnose-vm-network.sh  find-sed.sh  generate-openclaw-secrets.sh  git-prmerge  git-provision.sh  launch-parallel.py  lib.sh  list-kernel-module-params.sh  scp-example.sh  (+8 more)
(+255 files in other folders)
